--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "claude-drive-mcp-expanded",
   "version": "1.0.0",
-  "description": "Expanded MCP connector for Google Drive (Photo_Storage folder only)",
+  "description": "Google Drive MCP helper with MCP protocol support",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
-  "engines": {
-    "node": ">=18"
-  },
   "dependencies": {
-    "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "googleapis": "^121.0.0"
+    "googleapis": "^118.0.0",
+    "body-parser": "^1.20.2",
+    "@modelcontextprotocol/sdk": "^0.5.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
