--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "claude-drive-mcp-expanded",
   "version": "1.0.0",
-  "description": "Google Drive MCP helper with MCP protocol support",
-  "type": "module",
+  "description": "Google Drive MCP helper",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -10,8 +9,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "googleapis": "^118.0.0",
-    "body-parser": "^1.20.2",
-    "@modelcontextprotocol/sdk": "^0.5.0"
+    "body-parser": "^1.20.2"
   },
   "engines": {
     "node": ">=18.0.0"
